infra/k8s/orchestrator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:  
  name: Orchestrator
spec:
  replicas: 2
  selector:
    matchLabels:
    app: orchestrator
  template:
    metadata:
    labels:
      app: orchestrator
    annotations:
      prometheus.io/scrape: "true"
      prometheus.io/port: "8002"
      prometheus.io/path: "/metrics"
  spec:
    containers:
      - name: orchestrator
        image: 789438508565.dkr.ecr-us-east-1.amazonaws.com/orchestrator.latest
        ports:
          - containerPort:8002
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
        livenessProbe:
          httpGet:
            path: /health
            port: 8002
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /health
            port:8002
          initialDelaySeconds: 5
          periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name:orchestrator
sepc:
  selector:
    app: orchestrator
  ports:
    - port: 8002
      targetPort: 8002
  type: ClusterIP
